force-app/main/default/objects/TestCase__c/TestCase__c.object-meta.xml
<CustomObject>
    <label>Test Case</label>
    <nameField>
        <displayFormat>SP-TC-{0000}</displayFormat>
        <label>TestCase Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>TestCases</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>