force-app/main/default/objects/TestCase__c/fields/Actual_Time_for_Write_Test_Step__c.field-meta.xml
<CustomField>
    <fullName>Actual_Time_for_Write_Test_Step__c</fullName>
    <description>Actual time spent in writing the Test Step</description>
    <label>Actual Time for Write Test Step</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>