force-app/main/default/objects/TestCase__c/fields/Actual_Time_Spent__c.field-meta.xml
<CustomField>
    <fullName>Actual_Time_Spent__c</fullName>
    <description>Actual time spent in executing Test Step</description>
    <label>Actual Time Spent</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>