force-app/main/default/objects/TestCase__c/fields/Budget_ExecutingTestStep__c.field-meta.xml
<CustomField>
    <fullName>Budget_ExecutingTestStep__c</fullName>
    <description>Budget for executing the Test Step</description>
    <label>Budget for Executting TS</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>