force-app/main/default/objects/TestCase__c/fields/Budget_for_Writing_TS__c.field-meta.xml
<CustomField>
    <fullName>Budget_for_Writing_TS__c</fullName>
    <description>Budget to write the Test Steps in hours</description>
    <label>Budget for Writing TS</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>