force-app/main/default/objects/TestCase__c/fields/EAC__c.field-meta.xml
<CustomField>
    <fullName>EAC__c</fullName>
    <description>Estimate at complete for executing Test Step</description>
    <label>EAC</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>