force-app/main/default/objects/TestCase__c/fields/EAC_Write_TS__c.field-meta.xml
<CustomField>
    <fullName>EAC_Write_TS__c</fullName>
    <description>Estimate at completion for writing Test Step</description>
    <label>EAC-Write TS</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>