force-app/main/default/objects/TestCase__c/fields/ETC_Execute_TS__c.field-meta.xml
<CustomField>
    <fullName>ETC_Execute_TS__c</fullName>
    <description>Estimate to complete for executing Test Step</description>
    <label>ETC Execute TS</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>