force-app/main/default/objects/TestCase__c/fields/ETC_Write_TS__c.field-meta.xml
<CustomField>
    <fullName>ETC_Write_TS__c</fullName>
    <label>ETC Write TS</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>