force-app/main/default/objects/TestCase__c/fields/EV_Execute_TS__c.field-meta.xml
<CustomField>
    <fullName>EV_Execute_TS__c</fullName>
    <label>EV-Execute TS</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>