force-app/main/default/objects/TestCase__c/fields/EV_Write_TS__c.field-meta.xml
<CustomField>
    <fullName>EV_Write_TS__c</fullName>
    <description>Earned value for writing Test Step</description>
    <label>EV-Write TS</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>