force-app/main/default/objects/TestCase__c/fields/External_Id__c.field-meta.xml
<CustomField>
    <fullName>External_Id__c</fullName>
    <description>External Id</description>
    <label>External Id</label>
    <length>15</length>
    <type>Text</type>
</CustomField>