force-app/main/default/objects/TestCase__c/fields/Index__c.field-meta.xml
<CustomField>
    <fullName>Index__c</fullName>
    <description>Index</description>
    <label>Index</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>