force-app/main/default/objects/TestCase__c/fields/Nom__c.field-meta.xml
<CustomField>
    <fullName>Nom__c</fullName>
    <description>Name of the person who writes the Test Steps</description>
    <label>Nom</label>
    <length>50</length>
    <type>Text</type>
</CustomField>