force-app/main/default/objects/TestCase__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Type</description>
    <label>Type</label>
    <length>15</length>
    <type>Text</type>
</CustomField>