force-app/main/default/objects/TestCase__c/fields/Work_Item__c.field-meta.xml
<CustomField>
    <fullName>Work_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Relationship to Work item for User Story,Defects,improvement</description>
    <label>Work Item</label>
    <referenceTo>WorkItem__c</referenceTo>
    <relationshipName>TestCases</relationshipName>
    <type>Lookup</type>
</CustomField>